User testing N 1 : testing the Atom(s) selection and deselection with the peak highlighting and unhighlighting : bug are fixed and it works
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@738 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/specview/src/main/javascript/specview/specview/controller/demo3.html
+++ b/specview/src/main/javascript/specview/specview/controller/demo3.html
@@ -899,6 +899,11 @@ Hide the window
      <li>
      <a href="javascript:specview.controller.plugins.Highlight.highlightSerieOfPeaks(document.editorObject)">Identify the peaks of the atoms you selected</a>
      </li><br>
+     
+	 <li>
+     <a href="javascript:specview.controller.plugins.Highlight.UnhighlightSerieOfPeaks(document.editorObject)">Unselect the peaks of this atom</a>
+     </li><br>
+     
      <li>
           <a href="javascript:specview.controller.plugins.Highlight.reDrawMolecule(document.editorObject)">Unselect everything</a>
 	 </li><br>
@@ -990,7 +995,7 @@ function donnut(){
 
 ></textarea>
 
-<textarea id = "peakInformation" rows="10" cols="20"
+<textarea id = "peakInformation" rows="10" cols="20" wrap = "off"
 		  style="
 		    position : absolute;
 		  	left : 870px;
