--- a/specview/src/main/javascript/specview/specview/controller/demo3.html
+++ b/specview/src/main/javascript/specview/specview/controller/demo3.html
@@ -65,7 +65,7 @@ function initPage(){
 //			var toolbar = new specview.controller.DefaultToolbar.makeDefaultMoleculeToolbar(goog.dom.getElement('moleculeEditorToolbar'));  
 
 			var cmlData=cmlmolecules.split("$$END$$\n");
-			var xmlDoc=specview.io.SpectrumCMLParser.getDocument(cmlData[5]);//XML document
+			var xmlDoc=specview.io.SpectrumCMLParser.getDocument(cmlData[0]);//XML document
 			spectrumData=new specview.model.NMRdata();
 			spectrumData=specview.io.SpectrumCMLParser.parseDocument(spectrumData,xmlDoc,navigator.appName);//a cmlObject
 			
@@ -1005,6 +1005,11 @@ function donnut(){
 
 ></textarea>
 
+<script>
+var cccc = "cacacaca"
+//document.getElementById("peakInformation").innerHTML = cccc.bold()
+document.write(ccc.bold)
+</script>
 
 </body>
 </html>
