--- a/specview/src/main/javascript/specview/specview/controller/demo3.html
+++ b/specview/src/main/javascript/specview/specview/controller/demo3.html
@@ -265,7 +265,10 @@ document.ShowContent = function(d,objet) {
 		return; 
 	}
 	var dd = document.getElementById(d);
-	AssignPosition(dd);
+	if(d == "floatingBox"){
+		AssignPosition(dd);
+	}
+
 	dd.style.display = "block";
 };
 
@@ -346,8 +349,16 @@ Hide the window
  	
  	<input class = "button"	id="cmlInputFile"	type = "file"> -->
 <input id="textCmlInput" class="button" type="button" onclick="ShowContent('floatingBoxInputCmlContent')" value="Input file content">
-<input id="random entry" class="button" type="button" onclick="ShowRandomEntry()" value="Show random entry">
 
+<script>
+
+			if(navigator.appVersion.search("Chrome") != -1){
+			}else{
+				document.write("<input id=\"random entry\" class=\"button\" type=\"button\" onclick=\"ShowRandomEntry()\" value=\"Show random entry\">")
+			}
+
+
+</script>
 
 
 <script type = "text/javascript">
@@ -457,9 +468,9 @@ count = 0;
 	<fieldset id="fieldSet" style="width:1200px; border: none" >
       <legendstyle="top:143px"><h1>MetaboLight Spectrum viewer</h1></legend>
       <br>
-      <li id="molName"></li>
-      <li id="molId"></li>
-      <li id="experimentType"></li>
+      <li id="molName"><b>Molecule name: </b></li>
+      <li id="molId"><b>Molecule id: </b></li>
+      <li id="experimentType"><b>Experiment type: </b></li>
       <li id="experimentId"><b>Experiment id: </b><script>//document.write(spectrumData.molecule.name)</script></li>
    
    
@@ -654,19 +665,22 @@ count = 0;
 <div
 id="floatingBoxInputCmlContent";
 style="display:none;
-	position:absolute; 
+	position:absolute;
+	left:20px;
+	top:100px;
     border-style: double;
     background-color: #FFFFFF; 
     padding: 1px;"
 >
 Copy paste here after the content of your .cml file<br/>
-<textarea rows="20" cols="20" id="CMLinputText" value="" wrap = "off"></textarea><br/>
-<input type="button" onclick="launch()"; return true;" value="View experiment !"><br/>
 <a 
  onmouseover="document.HideContent('floatingBoxInputCmlContent'); return true;"
  href="javascript:HideContent('floatingBoxInputCmlContent')">
 Hide the window
-</a>
+</a><br/>
+<textarea rows="20" cols="20" id="CMLinputText" value="" wrap = "off"></textarea><br/>
+<input type="button" onclick="launch()"; return true;" value="View experiment !"><br/>
+
 </div>
 
 <!-- ################################ COLOR FLOATING BOX ############################ -->
