Displaying the browser support
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@885 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/specview/src/main/javascript/specview/specview/controller/demo3.html
+++ b/specview/src/main/javascript/specview/specview/controller/demo3.html
@@ -760,9 +760,11 @@ Hide the window
 
 <!-- ###################################### HELP FLOATING BOX ################################### -->
 <div class="floatingWindow"
-	 id="floatingBoxHelp" 
+	 id="floatingBoxHelp"
 	 style="display:none; 
-	 position:absolute; 
+	 position:absolute;
+	 left: 20px;
+	 top: 50px;
      border-style: double;
      background-color: #DEA12F;
      opacity: 600;
@@ -770,6 +772,22 @@ Hide the window
 
         <legendstyle="top:143px"><h1>MetaboLight Spectrum viewer: <b>Help</b></h1></legend>
         <br>
+        <img src="../../images/firefox-logo.png"
+	 width="35"
+	 height="35">
+	 
+<img src="../../images/google-chrome-logo.jpg"
+	 width="35"
+	 height="35">
+	 
+<img src="../../images/opera-logo.jpg"
+	 width="35"
+	 height="35">
+	 
+<img src="../../images/safari-logo.png"
+	 width="35"
+	 height="35">
+	 <br/>
 -This is a tool allowing to <b>view</b> the result of your <b>chemistry experiments</b>.<br>
 -It handles the following type of <b>experiment</b>:
 <ul>
@@ -957,7 +975,6 @@ function donnut(){
 		  	top : 370px;
 	     		"
 ></textarea>
-
 
 
 
