Slightly more polishing for google chrome : fix the color floating box location
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@886 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/specview/src/main/javascript/specview/specview/controller/demo3.html
+++ b/specview/src/main/javascript/specview/specview/controller/demo3.html
@@ -689,6 +689,8 @@ Hide the window
  id="floatingBoxColor" 
  style="display:none; 
     position:absolute; 
+    left:10px;
+    top:50px;
     border-style: double;
     background-color: #FFFFFF; 
     padding: 1px;">
