Structured parallel coordinates samples Biojs compound popup for the chebi id, but commented, it doesn't work on IE!
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1020 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/var/parallel coordinates/structuredPC/Structured Parallel Coordinates.html
+++ b/metabolights-webapps/src/main/webapp/var/parallel coordinates/structuredPC/Structured Parallel Coordinates.html
@@ -111,17 +111,17 @@ h3 {
 	  		</tr>
 			<tr>
 				<td>D-alanine</td>
-				<td><a href="#" onclick="selectline(1);">0.0012</a></td>
-				<td>0.0018</td>
-				<td>0.0016</td>
-				<td>0.0013</td>
+				<td onmouseover="spc.selectLine('Average concentration',0.0012);">0.0012</td>
+				<td onmouseover="spc.selectLine('Average concentration',0.0018);">0.0018</td>
+				<td onmouseover="spc.selectLine('Average concentration',0.0016);">0.0012</td>
+				<td onmouseover="spc.selectLine('Average concentration',0.0013);">0.0012</a></td>
 			</tr>
 			<tr>
 				<td>Glucose</td>
-				<td>0.0025</td>
-				<td>0.0056</td>
-				<td>0.0027</td>
-				<td>0.0045</td>
+				<td onmouseover="spc.selectLine('Average concentration',0.0025);">0.0025</td>
+				<td onmouseover="spc.selectLine('Average concentration',0.0056);">0.0056</td>
+				<td onmouseover="spc.selectLine('Average concentration',0.0027);">0.0027</td>
+				<td onmouseover="spc.selectLine('Average concentration',0.0045);">0.0042</td>
 			</tr>
 	  	</table>
 	</div>  
