Redesign of SubmissionCOntroller, SubmissionQueueCOntrollers request/pages
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1127 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/sprite_test.html
+++ b/metabolights-webapps/src/main/webapp/sprite_test.html
@@ -15,7 +15,7 @@
 <div class="ebiicon airplane"></div><xmp><div class="ebiicon airplane"></div></xmp>
 <div class="ebiicon alarm"></div><xmp><div class="ebiicon alarm"></div></xmp>
 <div class="ebiicon album"></div><xmp><div class="ebiicon album"></div></xmp> 
-<div class="ebiicon alert"></div><xmp><div class="ebiicon alert"></div></xmp> 
+<div class="ebiicon alert_i"></div><xmp><div class="ebiicon alert_i"></div></xmp> 
 <div class="ebiicon announcement"></div><xmp><div class="ebiicon announcement"></div></xmp> 
 <div class="ebiicon archive"></div><xmp><div class="ebiicon archive"></div></xmp> 
 <div class="ebiicon arrow-down"></div><xmp><div class="ebiicon arrow-down"></div></xmp> 
