--- a/metabolights-webapps/src/main/webapp/cssrl/iconfont/index.html
+++ b/metabolights-webapps/src/main/webapp/cssrl/iconfont/index.html
@@ -17,7 +17,7 @@
 		-webkit-box-sizing: border-box;
 		box-sizing: border-box;
 		margin: 0;
-		paddin: 0;
+		padding: 0;
 	}
 	.glyph {
 		float: left;
@@ -27,7 +27,7 @@
 		margin: .75em 1.5em .75em 0;
 		width: 7em;
 		border-radius: .375em;
-		box-shadow: inset 0 0 0 1px #fff, 0 0 0 1px #ccc;
+		box-shadow: inset 0 0 0 1px #f8f8f8, 0 0 0 1px #CCC;
 	}
 	.glyph input {
 		width: 100%;
@@ -133,6 +133,18 @@
 		<div class="fs1" aria-hidden="true" data-icon="&#x2c;"></div>
 		<input type="text" readonly="readonly" value="&amp;#x2c;" />
 	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#x2e;"></div>
+		<input type="text" readonly="readonly" value="&amp;#x2e;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#x2f;"></div>
+		<input type="text" readonly="readonly" value="&amp;#x2f;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#x2d;"></div>
+		<input type="text" readonly="readonly" value="&amp;#x2d;" />
+	</div>
 	</section>
 	<div class="clear"></div>
 	<section class="mtm clearfix" id="glyphs">
@@ -186,6 +198,18 @@
 	<span class="box1">
 		<span aria-hidden="true" class="icon-book"></span>
 		&nbsp;icon-book
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="icon-facebook"></span>
+		&nbsp;icon-facebook
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="icon-twitter"></span>
+		&nbsp;icon-twitter
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="icon-blogger"></span>
+		&nbsp;icon-blogger
 	</span>
 	</section>
 	<footer>
