Remove big sample test file Change layout: list to dropdown list, above the spectra.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1383 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/referencelayer/spectrumbrowser/src/main/webapp/index.html
+++ b/referencelayer/spectrumbrowser/src/main/webapp/index.html
@@ -11,12 +11,8 @@
     <div id="spectrumbrowser">
         {"list":
             [
-                {"name":"Ergothioneine CF20", "id":1, "url":"BML_Analysis_1.xml_CF20.json"},
-                {"name":"Ergothioneine", "id":2, "url":"BML_Analysis_1.xml.json"},
-                {"name":"Ergothioneine CF4", "id":3, "url":"BML_Analysis_1.xml_CF4.json"},
-                {"name":"Ergothioneine CF8", "id":4, "url":"BML_Analysis_1.xml_CF8.json"},
-                {"name":"Ergothioneine CF10", "id":5, "url":"BML_Analysis_1.xml_CF10.json"},
-                {"name":"Ergothioneine CF15", "id":6, "url":"BML_Analysis_1.xml_CF15.json"}
+                {"name":"Ergothioneine CF20 bla blabla blabla blabla blabla blabla blabla blabla bla", "id":1, "url":"./BML_Analysis_1.xml_CF20.json"},
+                {"name":"Ergothioneine CF15 blo blo blo blo blo blo blo blo blo blo blo blo blo blo ", "id":6, "url":"./BML_Analysis_1.xml_CF15.json"}
             ]
         }
     </div>
