--- a/referencelayer/spectrumbrowser/src/main/webapp/index.html
+++ b/referencelayer/spectrumbrowser/src/main/webapp/index.html
@@ -16,5 +16,15 @@
             ]
         }
     </div>
+
+    <div id="spectrumbrowserms">
+        {"list":
+        [
+        {"name":"Ergothioneine CF20 bla blabla blabla blabla blabla blabla blabla blabla bla", "id":1, "url":"./BML_Analysis_1.xml_CF20.json"},
+        {"name":"Ergothioneine CF15 blo blo blo blo blo blo blo blo blo blo blo blo blo blo ", "id":6, "url":"./BML_Analysis_1.xml_CF15.json"}
+        ]
+        }
+    </div>
+
 </body>
 </html>
