Improve error message email when isaTabConfig property is not set. Add Assay info div to the alternative Entry page (uses webservice) Add HTML email functionality
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1585 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/cssrl/iconfont/index.html
+++ b/metabolights-webapps/src/main/webapp/cssrl/iconfont/index.html
@@ -152,64 +152,64 @@
 		<h1>CSS Class Names</h1>
 	</header>
 	<span class="box1">
-		<span aria-hidden="true" class="icon-lab"></span>
-		&nbsp;icon-lab
+		<span aria-hidden="true" class="icon2-lab"></span>
+		&nbsp;icon2-lab
 	</span>
 	<span class="box1">
-		<span aria-hidden="true" class="icon-support"></span>
-		&nbsp;icon-support
+		<span aria-hidden="true" class="icon2-support"></span>
+		&nbsp;icon2-support
 	</span>
 	<span class="box1">
-		<span aria-hidden="true" class="icon-clock"></span>
-		&nbsp;icon-clock
+		<span aria-hidden="true" class="icon2-clock"></span>
+		&nbsp;icon2-clock
 	</span>
 	<span class="box1">
-		<span aria-hidden="true" class="icon-busy"></span>
-		&nbsp;icon-busy
+		<span aria-hidden="true" class="icon2-busy"></span>
+		&nbsp;icon2-busy
 	</span>
 	<span class="box1">
-		<span aria-hidden="true" class="icon-locked"></span>
-		&nbsp;icon-locked
+		<span aria-hidden="true" class="icon2-locked"></span>
+		&nbsp;icon2-locked
 	</span>
 	<span class="box1">
-		<span aria-hidden="true" class="icon-key"></span>
-		&nbsp;icon-key
+		<span aria-hidden="true" class="icon2-key"></span>
+		&nbsp;icon2-key
 	</span>
 	<span class="box1">
-		<span aria-hidden="true" class="icon-stats-up"></span>
-		&nbsp;icon-stats-up
+		<span aria-hidden="true" class="icon2-stats-up"></span>
+		&nbsp;icon2-stats-up
 	</span>
 	<span class="box1">
-		<span aria-hidden="true" class="icon-MetaboLightsLogo"></span>
-		&nbsp;icon-MetaboLightsLogo
+		<span aria-hidden="true" class="icon2-MetaboLightsLogo"></span>
+		&nbsp;icon2-MetaboLightsLogo
 	</span>
 	<span class="box1">
-		<span aria-hidden="true" class="icon-MSLogo"></span>
-		&nbsp;icon-MSLogo
+		<span aria-hidden="true" class="icon2-MSLogo"></span>
+		&nbsp;icon2-MSLogo
 	</span>
 	<span class="box1">
-		<span aria-hidden="true" class="icon-NMRLogo"></span>
-		&nbsp;icon-NMRLogo
+		<span aria-hidden="true" class="icon2-NMRLogo"></span>
+		&nbsp;icon2-NMRLogo
 	</span>
 	<span class="box1">
-		<span aria-hidden="true" class="icon-mail"></span>
-		&nbsp;icon-mail
+		<span aria-hidden="true" class="icon2-mail"></span>
+		&nbsp;icon2-mail
 	</span>
 	<span class="box1">
-		<span aria-hidden="true" class="icon-book"></span>
-		&nbsp;icon-book
+		<span aria-hidden="true" class="icon2-book"></span>
+		&nbsp;icon2-book
 	</span>
 	<span class="box1">
-		<span aria-hidden="true" class="icon-facebook"></span>
-		&nbsp;icon-facebook
+		<span aria-hidden="true" class="icon2-facebook"></span>
+		&nbsp;icon2-facebook
 	</span>
 	<span class="box1">
-		<span aria-hidden="true" class="icon-twitter"></span>
-		&nbsp;icon-twitter
+		<span aria-hidden="true" class="icon2-twitter"></span>
+		&nbsp;icon2-twitter
 	</span>
 	<span class="box1">
-		<span aria-hidden="true" class="icon-blogger"></span>
-		&nbsp;icon-blogger
+		<span aria-hidden="true" class="icon2-blogger"></span>
+		&nbsp;icon2-blogger
 	</span>
 	</section>
 	<footer>
