SpectrumBrowser adapted to accept JSON of MS spectra
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1661 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-referencelayer/spectrumbrowser/src/main/webapp/index.html
+++ b/metabolights-referencelayer/spectrumbrowser/src/main/webapp/index.html
@@ -30,8 +30,8 @@
     <div id="spectrumbrowserms">
         {"list":
         [
-        {"name":"Ergothioneine CF20 bla blabla blabla blabla blabla blabla blabla blabla bla", "id":1, "url":"./BML_Analysis_1.xml_CF20.json"},
-        {"name":"Ergothioneine CF15 blo blo blo blo blo blo blo blo blo blo blo blo blo blo ", "id":6, "url":"./BML_Analysis_1.xml_CF15.json"}
+        {"name":"Ergothioneine CF13 data", "id":7, "url":"./data.json"},
+        {"name":"Ergothioneine CF14 data", "id":8, "url":"./dataSmall.json"}
         ]
         }
     </div>
