SpectrumBrowser adapted to accept JSON of MS spectra
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1669 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-referencelayer/spectrumbrowser/src/main/webapp/index.html
+++ b/metabolights-referencelayer/spectrumbrowser/src/main/webapp/index.html
@@ -17,24 +17,29 @@
     <!--<script type="text/javascript" src="wwwdev.ebi.ac.uk/metabolights/dondesea/SpectrumBrowser/SpectrumBrowser.nocache.js"></script>-->
 </head>
 <body>
-    <h1>Spectrum Browser</h1>
-    <div id="spectrumbrowser">
-        {"list":
-            [
-                {"name":"Ergothioneine CF20 bla blabla blabla blabla blabla blabla blabla blabla bla", "id":1, "url":"./BML_Analysis_1.xml_CF20.json"},
-                {"name":"Ergothioneine CF15 blo blo blo blo blo blo blo blo blo blo blo blo blo blo ", "id":6, "url":"./BML_Analysis_1.xml_CF15.json"}
-            ]
-        }
-    </div>
+<h1>Spectrum Browser</h1>
 
-    <div id="spectrumbrowserms">
-        {"list":
-        [
-        {"name":"Ergothioneine CF13 data", "id":7, "url":"./data.json"},
-        {"name":"Ergothioneine CF14 data", "id":8, "url":"./dataSmall.json"}
-        ]
-        }
-    </div>
+<div id="spectrumbrowserms">
+    {"list":
+    [
+    {"name":"Ergothioneine CF13 data", "id":7, "url":"./data.json"},
+    {"name":"Ergothioneine CF14 data", "id":8, "url":"./BSU00001.json"},
+    {"name":"Ergothioneine CF15 data", "id":9, "url":"./KZ000246.json"},
+    {"name":"Ergothioneine CF16 data", "id":10, "url":"./KNA00561.json"}
+    ]
+    }
+</div>
+<div id="spectrumbrowser">
+    {"list":
+    [
+    {"name":"Ergothioneine CF20 bla blabla blabla blabla blabla blabla blabla blabla bla", "id":1,
+    "url":"./bmse000299_test.json"},
+    {"name":"Ergothioneine CF15 blo blo blo blo blo blo blo blo blo blo blo blo blo blo ", "id":6,
+    "url":"./BML_Analysis_1.xml_CF20.json"}
+    ]
+    }
+</div>
+
 
 </body>
 </html>
