Webapp: Layout and style improvements in new search prototype.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1848 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/elements/study_search_result_with_core_list_and_ajax.html
+++ b/metabolights-webapps/src/main/webapp/elements/study_search_result_with_core_list_and_ajax.html
@@ -5,12 +5,17 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <link rel="import" href="../polymer/bower_components/core-ajax/core-ajax.html">
   <link rel="import" href="study_search_result.html">
+  <link rel="import" href="study_search_result_layout.html">
   <link rel="import" href="../polymer/bower_components/core-list/core-list.html">
   <link rel="import" href="../polymer/bower_components/page-er/page-er.html">
   <link rel="stylesheet" href="../polymer/bower_components/page-er/page-er.css">	
  </head>
 <body>
-
+<style>
+	.search_study h3{
+		background-color: bisque;
+	}
+</style>
 <script>
 	// Query object to send to the search request
   	var query = {
