--- a/metabolights-webapps/src/main/webapp/elements/study_search_result_colors.html
+++ b/metabolights-webapps/src/main/webapp/elements/study_search_result_colors.html
@@ -2,18 +2,26 @@
 <core-style id="ssr_colors">  
 	<style>
 		.search_study h3{
-			background-color:burlywood;
+			background-color:#C58A4D;
 		}
-		.search_study{
-			border-style: solid;
-			border: 1px;
-			border-color:aqua;
-			
 		
+		.search_study h3 a{
+			color: black;
+			
+		}
+		.search_study h3 a:hover{
+			text-decoration:underline;
+			color:#333333;
+		}
+
+		.search_study{
+			border-style: none;
+			border-width: 1px;
+			border-color:#C58A4D;		
 		}
 		
 		.list h4{
-			background-color: lightgray;
+			background-color: grey;
 			color: white;
 			text-align: center;
 			padding: 3px;
