--- a/metabolights-webapps/src/main/webapp/elements/study_search_result_layout.html
+++ b/metabolights-webapps/src/main/webapp/elements/study_search_result_layout.html
@@ -7,7 +7,7 @@
 			box-sizing: border-box;
 		}
 		.search_study{
-			margin-top: 20px;
+			margin-top: 40px;
 
 		}
 		
@@ -24,6 +24,7 @@
 		}
 		.list ul{
 			margin-top: 3px;
+			margin-bottom: 3px;
 			padding: 5px;
 		}
 		.list ul li{
@@ -37,6 +38,7 @@
 
 		.search_study_id {
 			clear: left;
+			padding-top: 
 		}
 		@media screen and (min-width:600px) {
 			.list{
