Webapp: New search tweaks. WS: Fix facets serialization. Search: index more facets (OrganismPart, Descriptors, Factors,...)
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1851 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/elements/study_search_result_colors.html
+++ b/metabolights-webapps/src/main/webapp/elements/study_search_result_colors.html
@@ -2,11 +2,13 @@
 <core-style id="ssr_colors">  
 	<style>
 		.search_study h3{
-			background-color:#C58A4D;
+			background-color:#EDB882;
+			
 		}
 		
 		.search_study h3 a{
 			color: black;
+			font-weight: normal;
 			
 		}
 		.search_study h3 a:hover{
@@ -21,12 +23,15 @@
 		}
 		
 		.list h4{
-			background-color: grey;
-			color: white;
-			text-align: center;
-			padding: 3px;
+/*			background-color: grey;*/
+/*			color: white;*/
+/*			text-align: center;*/
+/*			padding: 3px;*/
 		}
 		
+		textarea:focus, input:focus{
+    		outline-color: #C58A4D;
+		}
 	</style>
 
 </core-style>
