--- a/metabolights-webapps/src/main/webapp/elements/study_search_result_layout.html
+++ b/metabolights-webapps/src/main/webapp/elements/study_search_result_layout.html
@@ -12,20 +12,27 @@
 		}
 		
 		.search_study *{
-			padding: 3px;
+			padding: 0px;
 		}
 		.search_study h3{
 			margin-bottom: 3px;
 			margin-top: 0px;
 			padding: 4px;
 		}
+		
+		.listcontainer{
+			overflow: hidden;
+			width: 100%;
+		}
+		
 		.list h4{
-			margin: 0px;
+			margin-top: 5px;
+			margin-bottom: 0px;
 		}
 		.list ul{
 			margin-top: 3px;
 			margin-bottom: 3px;
-			padding: 5px;
+/*			padding: 5px;*/
 		}
 		.list ul li{
 			list-style-type: none;
@@ -37,13 +44,12 @@
 		}
 
 		.search_study_id {
-			clear: left;
-			padding-top: 
+			padding-top: 8px;
 		}
 		@media screen and (min-width:600px) {
 			.list{
 				margin-top: 7px;
-				padding-left: 10px;
+/*				padding-left: 10px;*/
 				float: left;
 				width: 50%;
 			}
