Webapp: add new search using the ws.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1853 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/elements/study_search_result_colors.html
+++ b/metabolights-webapps/src/main/webapp/elements/study_search_result_colors.html
@@ -1,17 +1,16 @@
 <link rel="import" href="../polymer/bower_components/core-style/core-style.html">
 <core-style id="ssr_colors">  
 	<style>
-		.search_study h3{
-			background-color:#EDB882;
-			
+		.search_study h4{
+			/*background-color:#EDB882;*/
 		}
 		
-		.search_study h3 a{
-			color: black;
+		.search_study h4 a{
+			color: #C58A4D;
 			font-weight: normal;
 			
 		}
-		.search_study h3 a:hover{
+		.search_study h4 a:hover{
 			text-decoration:underline;
 			color:#333333;
 		}
@@ -22,7 +21,7 @@
 			border-color:#C58A4D;		
 		}
 		
-		.list h4{
+		.list h5{
 /*			background-color: grey;*/
 /*			color: white;*/
 /*			text-align: center;*/
