--- a/metabolights-webapps/src/main/webapp/index.html
+++ b/metabolights-webapps/src/main/webapp/index.html
@@ -22,6 +22,15 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
 	<head>
-	    <meta http-equiv="REFRESH" content="0;url=index">
+<!--	    <meta http-equiv="REFRESH" content="0;url=index">-->
+		
 	</head>
+	<body>
+	<h2 class="">Hello Adriano</h2>
+		
+	<script>
+			write(JSON.stringify(document.body));
+	</script>
+	
+	</body>
 </html>
