--- a/metabolights-webapps/src/main/webapp/elements/study_search_result.html
+++ b/metabolights-webapps/src/main/webapp/elements/study_search_result.html
@@ -25,13 +25,13 @@
 	<template>
 		<core-style ref="ssr_layout"></core-style>
 		<core-style ref="ssr_colors"></core-style> 
-		
+
 		<template if="{{studies.length == 0}}">
 			<h3>Your search did not match any documents.</h3>
 		</template>
 		<template repeat="{{study in studies}}">
 			<div class="search_study">
-				<h3><a href="{{study.studyIdentifier}}">{{study.title}}</a></h3>
+				<h4><a href="{{study.studyIdentifier}}">{{study.title}}</a></h4>
 				<span class="search_owners">
 				by
 				<template repeat="{{o in study.users}}">
@@ -41,7 +41,7 @@
 				
 				<div class="listcontainer">
 					<div class ="list search_study_organism">
-						<h4>Organism/s</h4>
+						<h5>Organism/s</h5>
 						<ul>
 						<template repeat="{{o in study.organism}}">
 							<li>{{o.organismName}}/{{o.organismPart}}</li>
@@ -50,7 +50,7 @@
 					</div>
 
 					<div class="list search_study_factors">
-						<h4>Factor/s</h4>
+						<h5>Factor/s</h5>
 						<ul>
 						<template repeat="{{f in study.factors}}">
 							<li>{{f.name}}</li>
@@ -67,6 +67,9 @@
 						will be release on the
 					</template>
 					<strong>{{study.studyPublicReleaseDate}}</strong>
+					<template if="{{!study.publicStudy}}">
+						<div class="icon icon-functional" data-icon="l"></div>
+					</template>
 				</div>
 
 			</div>
@@ -82,4 +85,4 @@
 			
 		});
 	</script>
-</polymer-element>
+</polymer-element>	
