--- a/metabolights-webapps/src/main/webapp/elements/study_search_result_colors.html
+++ b/metabolights-webapps/src/main/webapp/elements/study_search_result_colors.html
@@ -1,18 +1,19 @@
 <link rel="import" href="../polymer/bower_components/core-style/core-style.html">
 <core-style id="ssr_colors">  
 	<style>
-		.search_study h4{
+		/*.search_study h4{*/
 			/*background-color:#EDB882;*/
-		}
+		/*}*/
 		
 		.search_study h4 a{
 			color: #C58A4D;
 			font-weight: normal;
-			
+			text-decoration: none;
+
 		}
 		.search_study h4 a:hover{
 			text-decoration:underline;
-			color:#333333;
+			/*color:#333333;*/
 		}
 
 		.search_study{
@@ -27,10 +28,7 @@
 /*			text-align: center;*/
 /*			padding: 3px;*/
 		}
-		
-		textarea:focus, input:focus{
-    		outline-color: #C58A4D;
-		}
+
 	</style>
 
 </core-style>
