--- a/metabolights-webapps/src/main/webapp/elements/study_search_result_layout.html
+++ b/metabolights-webapps/src/main/webapp/elements/study_search_result_layout.html
@@ -22,7 +22,7 @@
 		
 		.listcontainer{
 			overflow: hidden;
-			width: 100%;
+			/*width: 100%;*/
 		}
 		
 		.list h5{
@@ -49,9 +49,9 @@
 		@media screen and (min-width:600px) {
 			.list{
 				margin-top: 7px;
-/*				padding-left: 10px;*/
+				padding-right: 5px;
 				float: left;
-				width: 50%;
+				/*width: 50%;*/
 			}
 		}
 		@media screen and (max-width:599px) {
